objects/Event_Profit__c.object
<CustomObject>
    <description>Record of all event</description>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>End Date and Time of the Event</description>
        <inlineHelpText>Select the exact ending Date and Time of the Event</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <description>Auto Generated Event Number</description>
        <displayFormat>EN-{0000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>This an auto-generated number</inlineHelpText>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Defines if the event is In-Person or Virtual</description>
        <inlineHelpText>Is the event happening in-person or virtual</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_for_Deletion__c</fullName>
        <description>Display Red Flag</description>
        <formula>IF( ISPICKVAL( Status__c , &apos;Deleted&apos;) , (IMAGE(&quot;https://www.pngitem.com/pimgs/m/508-5080910_red-flag-red-flag-waving-gif-hd-png.png&quot;,&quot;Red Flag&quot;, 100,100)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag for Deletion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Defines if the Frequency is daily or weekly</description>
        <inlineHelpText>Is the frequency of the event daily or weekly?</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the event is Live</description>
        <inlineHelpText>Is event is Live or Not?</inlineHelpText>
        <label>Live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Verified__c</fullName>
        <description>Confirmation if the Location is Verified</description>
        <formula>Location__r.Verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Confirms if the Location is verified</inlineHelpText>
        <label>Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of the event</description>
        <inlineHelpText>Select the appropriate Event Location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location_Address_Book__c</referenceTo>
        <relationshipLabel>Events(ProFit)</relationshipLabel>
        <relationshipName>Events_ProFit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <description>Maximum person for the event</description>
        <inlineHelpText>Maximum number of attendees for the event</inlineHelpText>
        <label>Max Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_People_Attending__c</fullName>
        <description>Total Number of people attending the event</description>
        <inlineHelpText>Total Number of people attending the event</inlineHelpText>
        <label># People Attending</label>
        <summaryForeignKey>Event_Attendee__c.Event_ProFit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organizer of the event</description>
        <inlineHelpText>Select the appropriate Organizer</inlineHelpText>
        <label>Organizer</label>
        <referenceTo>Event_Organizer__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the event is recurring</description>
        <inlineHelpText>Is the event Recurring or not?</inlineHelpText>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Seats__c</fullName>
        <description>Total of remaining seats</description>
        <formula>Max_Seats__c - Num_People_Attending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total of remaining seats</inlineHelpText>
        <label>Remaining Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Start Date and Time of the event</description>
        <inlineHelpText>Select the exact starting Date and Time of the Event</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Defines the status of the event</description>
        <inlineHelpText>Select the appropriate Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Post Poned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event(ProFit)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events(ProFit)</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>EventTypeEqualsVirtualRule</fullName>
        <active>true</active>
        <description>If Virtual is Selected as Value for Event Type field then PREVENT user to Select Location on Event Record</description>
        <errorConditionFormula>AND( ISPICKVAL(   Event__c   , &apos;Virtual&apos;) ,   NOT(ISBLANK(  Location__c   ) ) )</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>If the event is Virtual, Location is not available</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EventTypeInPersonRule</fullName>
        <active>true</active>
        <description>If Event Type is In-Person then user is required to select Location on Event Record.</description>
        <errorConditionFormula>AND(ISPICKVAL( Event__c ,&apos;In-person&apos;),ISBLANK( Location__c ))</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Location is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RecurringRule</fullName>
        <active>true</active>
        <description>If Recurring is checked, the user must need to fill Frequency field. and If Recurring is not checked, Frequency must be &quot;None&quot;</description>
        <errorConditionFormula>OR(AND( Recurring__c  = TRUE, ISBLANK( TEXT(  Frequency__c  ))),AND(Recurring__c  = FALSE , NOT(ISBLANK( TEXT( Frequency__c )))))</errorConditionFormula>
        <errorMessage>If Event is Recurring, pick Frequency field and If Event is not Recurring, Frequency field must be &quot;None&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateTimeOneDayRule</fullName>
        <active>true</active>
        <description>End Date/Time must be at least 1 day ahead of Start Date/Time</description>
        <errorConditionFormula>AND(DATEVALUE(   End_Date_Time__c   ) &lt; (DATEVALUE(   Start_Date_Time__c   ) + 1), NOT( ISNULL(  End_Date_Time__c  ) ) )</errorConditionFormula>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
        <errorMessage>End Date must be at least 1 day ahead from Start Date</errorMessage>
    </validationRules>
</CustomObject>